testsuite/tests/properties/invalid_no/correct.lkt
import common

class BarNode: FooNode {
    @exported fun prop(): Entity[FooNode] = null[Entity[FooNode]]
}
